--- a/index_chatgpt.html
+++ b/index_chatgpt.html
@@ -2,33 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Introduction to Web Development</title>
+    <title>CIS 128 - Mobile Web App Dev at College of San Mateo - Spring 20206</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <!-- Page Heading -->
-    <h1>Introduction to Web Development</h1>
+    <h1>CIS 128 - Mobile Web App Dev at College of San Mateo - Spring 20206</h1>
 
     <!-- First Section: About Me with Image -->
     <section class="about-container">
-        <img src="your-photo.jpg" alt="Photo of me" class="profile-pic">
+        <img src="headshot.jpeg" alt="My LinkedIn profile photo" class="profile-pic">
 
         <p>
-            My name is Hector, and I am interested in learning how to build and design websites.
-            I enjoy working with technology and problem-solving, and I’m excited to develop
-            skills that allow me to create interactive and visually appealing web pages.
-            This course is an important step in my journey toward understanding modern web development.
+Hi, my name is Hector. I'm studying arts and media, starting my second year at CSM.
         </p>
     </section>
 
     <!-- Second Section: Reason for Taking the Class -->
     <section>
         <p>
-            I am taking this class to gain a strong foundation in web technologies such as HTML,
-            CSS, and JavaScript. These skills will help me better understand how websites work
-            and allow me to build projects for personal, academic, and professional use.
-            I also want to improve my technical skills and creativity.
+Taking this class to learn mobile web development, mainly apps for personal use and for applications in arts and media projects. 
         </p>
     </section>
 
