--- a/index.html
+++ b/index.html
@@ -16,19 +16,13 @@
 
         <p>
             My name is Hector, and I am interested in learning how to build and design websites.
-            I enjoy working with technology and problem-solving, and I’m excited to develop
-            skills that allow me to create interactive and visually appealing web pages.
-            This course is an important step in my journey toward understanding modern web development.
         </p>
     </section>
 
     <!-- Second Section: Reason for Taking the Class -->
     <section>
         <p>
-            I am taking this class to gain a strong foundation in web technologies such as HTML,
-            CSS, and JavaScript. These skills will help me better understand how websites work
-            and allow me to build projects for personal, academic, and professional use.
-            I also want to improve my technical skills and creativity.
+            I am taking this class to be able to write and publish apps online.
         </p>
     </section>
 
