--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Introduction to Web Development</title>
+    <title>CIS-128-OLH-Mobile Web App Development-CRN 43884</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <!-- Page Heading -->
-    <h1>Introduction to Web Development</h1>
+    <h1>CIS-128-OLH-Mobile Web App Development-CRN 43884</h1>
 
     <!-- First Section: About Me with Image -->
     <section class="about-container">
@@ -41,16 +41,14 @@
         <h2>Resources</h2>
         <ul>
             <li>
-                <a href="https://developer.mozilla.org" target="_blank">
-                    MDN Web Docs
-                </a> – A comprehensive resource for learning HTML, CSS, and JavaScript with
-                clear explanations and examples.
+                <a href="https://github.com/Michael0x2a/curated-programming-resources/blob/master/resources.md" target="_blank">
+                    GitHub
+                </a> GitHub is a, cloud-based platform that acts as a central hub for developers to store, manage, and collaborate on software projects using the Git version control system
             </li>
             <li>
                 <a href="https://www.w3schools.com" target="_blank">
                     W3Schools
-                </a> – An easy-to-follow reference site with tutorials, examples,
-                and practice exercises for web development.
+                </a> – An easy-to-follow reference site with tutorials, examples, and practice exercises for web development.
             </li>
         </ul>
     </section>
